--- a/src/AVOne.Tool/Resources/Resource.zh-CN.resx
+++ b/src/AVOne.Tool/Resources/Resource.zh-CN.resx
@@ -138,6 +138,12 @@
   <data name="HelpTextQuiet" xml:space="preserve">
     <value>不再显示摘要信息</value>
   </data>
+  <data name="HelpTextVerbOrganize" xml:space="preserve">
+    <value>扫描整理指定文件下的视频文件.</value>
+  </data>
+  <data name="HelpTextVerbScan" xml:space="preserve">
+    <value>扫描指定文件下的视频文件，并进行整理结果预览.</value>
+  </data>
   <data name="HelpTextVerbSearchMetadata" xml:space="preserve">
     <value>根据文件名查询元数据信息</value>
   </data>
