--- a/src/AVOne.Tool/Resources/Resource.resx
+++ b/src/AVOne.Tool/Resources/Resource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ErrorDir" xml:space="preserve">
+    <value>Directory is null or not exist.</value>
+  </data>
   <data name="ErrorDirectoryNotExists" xml:space="preserve">
     <value>Directory '{}' not exists.</value>
   </data>
