--- a/src/AVOne.Tool/Resources/Resource.zh-CN.resx
+++ b/src/AVOne.Tool/Resources/Resource.zh-CN.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ErrorDir" xml:space="preserve">
+    <value>路径为空或者路径不存在.</value>
+  </data>
   <data name="ErrorDirectoryNotExists" xml:space="preserve">
     <value>指定路劲'{}'不存在</value>
   </data>
