--- a/src/AVOne.Tool/Resources/Resource.resx
+++ b/src/AVOne.Tool/Resources/Resource.resx
@@ -147,11 +147,11 @@
   <data name="HelpTextVerbOrganize" xml:space="preserve">
     <value>Scan &amp; organize files under specific folder. </value>
   </data>
+  <data name="HelpTextVerbPrintMetadata" xml:space="preserve">
+    <value>Print movie metadata by filename.</value>
+  </data>
   <data name="HelpTextVerbScan" xml:space="preserve">
     <value>Scan files under specific folder and preview the organize result.</value>
-  </data>
-  <data name="HelpTextVerbSearchMetadata" xml:space="preserve">
-    <value>Search metadata by filename.</value>
   </data>
   <data name="InvalidMoviePath" xml:space="preserve">
     <value>File path '{0}' not valid media file.</value>
