--- a/source/AVOne.Tool/Resources/Resource.resx
+++ b/source/AVOne.Tool/Resources/Resource.resx
@@ -144,8 +144,8 @@
   <data name="HelpTextFileName" xml:space="preserve">
     <value>filename</value>
   </data>
-  <data name="HelpTextVerbConfig" xml:space="preserve">
-    <value>Get and set application config.</value>
+  <data name="HelpTextVerbInfo" xml:space="preserve">
+    <value>Print system info.</value>
   </data>
   <data name="HelpTextVerbOrganize" xml:space="preserve">
     <value>Scan &amp; organize files under specific folder. </value>
