--- a/source/AVOne.Tool/Resources/Resource.resx
+++ b/source/AVOne.Tool/Resources/Resource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ErrorCannotInstallPlugins" xml:space="preserve">
+    <value>Can not install plugin {0}</value>
+  </data>
   <data name="ErrorDir" xml:space="preserve">
     <value>Directory is null or not exist.</value>
   </data>
@@ -128,6 +131,9 @@
   </data>
   <data name="ExamplesNormalScenario" xml:space="preserve">
     <value>normal scenario</value>
+  </data>
+  <data name="HelpTextAddRepo" xml:space="preserve">
+    <value>Add plugin repository.</value>
   </data>
   <data name="HelpTextCollectionType" xml:space="preserve">
     <value>Collection Type, could be PornMovie,default is PornMovie.</value>
@@ -144,6 +150,18 @@
   <data name="HelpTextFileName" xml:space="preserve">
     <value>filename</value>
   </data>
+  <data name="HelpTextInstallPlugin" xml:space="preserve">
+    <value>Install plugin.</value>
+  </data>
+  <data name="HelpTextShowAvaliablePlugins" xml:space="preserve">
+    <value>Show all plugins in plugin repository.</value>
+  </data>
+  <data name="HelpTextShowInstalledPlugins" xml:space="preserve">
+    <value>Show all installed plugins.</value>
+  </data>
+  <data name="HelpTextShowPluginRepositoryList" xml:space="preserve">
+    <value>Show plugin repository list.</value>
+  </data>
   <data name="HelpTextVerbInfo" xml:space="preserve">
     <value>Print system info.</value>
   </data>
@@ -153,11 +171,20 @@
   <data name="HelpTextVerbPlugin" xml:space="preserve">
     <value>Manage plugins.</value>
   </data>
+  <data name="HelpTextVerbPluginRepo" xml:space="preserve">
+    <value>Manage plugin repository.</value>
+  </data>
   <data name="HelpTextVerbPrintMetadata" xml:space="preserve">
     <value>Print movie metadata by filename.</value>
   </data>
   <data name="HelpTextVerbScan" xml:space="preserve">
     <value>Scan files under specific folder and preview the organize result.</value>
+  </data>
+  <data name="InfoDownloadingPlugin" xml:space="preserve">
+    <value>Downloading and install plugin '{0}'</value>
+  </data>
+  <data name="InfoSearchingPlugins" xml:space="preserve">
+    <value>Searching plugin...</value>
   </data>
   <data name="InvalidMoviePath" xml:space="preserve">
     <value>File path '{0}' not valid media file.</value>
@@ -224,5 +251,8 @@
   </data>
   <data name="SentenceVersionCommandText" xml:space="preserve">
     <value>Display version information.</value>
+  </data>
+  <data name="SuccessDownloadPlugin" xml:space="preserve">
+    <value>Download plugin {0} successfully.</value>
   </data>
 </root>
