--- a/src/AVOne.Tool/Resources/Resource.resx
+++ b/src/AVOne.Tool/Resources/Resource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ErrorCannotInstallPlugins" xml:space="preserve">
+    <value>Can not install plugin {0}</value>
+  </data>
   <data name="ErrorDir" xml:space="preserve">
     <value>Directory is null or not exist.</value>
   </data>
@@ -128,6 +131,9 @@
   </data>
   <data name="ExamplesNormalScenario" xml:space="preserve">
     <value>normal scenario</value>
+  </data>
+  <data name="HelpTextAddRepo" xml:space="preserve">
+    <value>Add plugin repository.</value>
   </data>
   <data name="HelpTextCollectionType" xml:space="preserve">
     <value>Collection Type, could be PornMovie,default is PornMovie.</value>
@@ -144,14 +150,53 @@
   <data name="HelpTextFileName" xml:space="preserve">
     <value>filename</value>
   </data>
+  <data name="HelpTextInstallPlugin" xml:space="preserve">
+    <value>Install plugin.</value>
+  </data>
+  <data name="HelpTextSaveMetadata" xml:space="preserve">
+    <value>Save metadata or not. </value>
+  </data>
+  <data name="HelpTextScanDir" xml:space="preserve">
+    <value>Path of directory to be scanned.</value>
+  </data>
+  <data name="HelpTextScanPath" xml:space="preserve">
+    <value>Path of file to be scanned.</value>
+  </data>
+  <data name="HelpTextShowAvaliablePlugins" xml:space="preserve">
+    <value>Show all plugins in plugin repository.</value>
+  </data>
+  <data name="HelpTextShowInstalledPlugins" xml:space="preserve">
+    <value>Show all installed plugins.</value>
+  </data>
+  <data name="HelpTextShowPluginRepositoryList" xml:space="preserve">
+    <value>Show plugin repository list.</value>
+  </data>
+  <data name="HelpTextVerbInfo" xml:space="preserve">
+    <value>Print system info.</value>
+  </data>
   <data name="HelpTextVerbOrganize" xml:space="preserve">
     <value>Scan &amp; organize files under specific folder. </value>
+  </data>
+  <data name="HelpTextVerbPlugin" xml:space="preserve">
+    <value>Manage plugins.</value>
+  </data>
+  <data name="HelpTextVerbPluginRepo" xml:space="preserve">
+    <value>Manage plugin repository.</value>
   </data>
   <data name="HelpTextVerbPrintMetadata" xml:space="preserve">
     <value>Print movie metadata by filename.</value>
   </data>
   <data name="HelpTextVerbScan" xml:space="preserve">
     <value>Scan files under specific folder and preview the organize result.</value>
+  </data>
+  <data name="InfoDownloadingPlugin" xml:space="preserve">
+    <value>Downloading and install plugin '{0}'</value>
+  </data>
+  <data name="InfoFetchMetaData" xml:space="preserve">
+    <value>Scaning media metadata.</value>
+  </data>
+  <data name="InfoSearchingPlugins" xml:space="preserve">
+    <value>Searching plugin...</value>
   </data>
   <data name="InvalidMoviePath" xml:space="preserve">
     <value>File path '{0}' not valid media file.</value>
@@ -176,6 +221,9 @@
   </data>
   <data name="SentenceHelpCommandTextVerb" xml:space="preserve">
     <value>Display more information on a specific command.</value>
+  </data>
+  <data name="SentenceMissingGroupOptionError" xml:space="preserve">
+    <value>At least one option in a group '{0}' must have value.</value>
   </data>
   <data name="SentenceMissingRequiredOptionError" xml:space="preserve">
     <value>Required option '{0}' is missing.</value>
@@ -215,5 +263,8 @@
   </data>
   <data name="SentenceVersionCommandText" xml:space="preserve">
     <value>Display version information.</value>
+  </data>
+  <data name="SuccessDownloadPlugin" xml:space="preserve">
+    <value>Download plugin {0} successfully.</value>
   </data>
 </root>
