--- a/src/Lang/Lang.en-US.json
+++ b/src/Lang/Lang.en-US.json
@@ -1,3 +1,14 @@
 {
-  "ProviderNotAvailable": "Provider {0} Not Available"
+  "PROVIDER_NOT_AVAILABLE": "Provider '{0}' Not Available",
+  "SERVER_ERROR": "Server Error",
+  "PATH_NOT_EXIST": "Path '{0}' not exists.",
+  "DIR_NOT_EXIST": "Directory '{0}' not exists.",
+  "SKIP_METADATA_NOT_EXIST": "Skip '{0}' due to metadata for this file not exists.",
+  "SKIP_FILE_DUE_TO_TARGET_FILE_AREADY_EXIST": "Skip '{0}' due to target file path '{1}' already exists.",
+
+
+  "Searching Metadata": "Searching metadata for files ...",
+  "Moving file": "Moving file {0} ...",
+  "Saving metadata": "Saving file metadata for {0} ...",
+  "Moving file successfully": "Moving file {0} successfully to {1}"
 }
