--- a/src/Lang/Lang.en-US.json
+++ b/src/Lang/Lang.en-US.json
@@ -10,5 +10,6 @@
   "Searching Metadata": "Searching metadata for files ...",
   "Moving file": "Moving file {0} ...",
   "Saving metadata": "Saving file metadata for {0} ...",
-  "Moving file successfully": "Moving file {0} successfully to {1}"
+  "Moving file successfully": "Moving file {0} successfully to {1}",
+  "Downloading Remote Image": "Downloading images for '{0}'"
 }
