--- a/src/Lang/Lang.zh-CN.json
+++ b/src/Lang/Lang.zh-CN.json
@@ -9,5 +9,6 @@
   "Searching Metadata": "正在搜索媒体元数据 ...",
   "Moving file": "移动文件 {0} ...",
   "Saving metadata": "为 {0} 保存元数据 ...",
-  "Moving file successfully": "成功将文件 {0} 移动至 {1}"
+  "Moving file successfully": "成功将文件 {0} 移动至 {1}",
+  "Downloading Remote Image": "正在为文件 '{0}'下载图片"
 }
