--- a/src/Lang/Lang.en-US.json
+++ b/src/Lang/Lang.en-US.json
@@ -14,5 +14,9 @@
   "Moving file successfully": "Moving file {0} successfully to {1}",
   "Downloading Remote Image": "Downloading images for '{0}'",
   "Not a movie": "'{0}' is not a video file.",
-  "Can't find metadata": "Can't get metadata for '{0}'."
+  "Can't find metadata": "Can't get metadata for '{0}'.",
+  "Can not find extractor for web url": "Can not find extractor for web url '{0}'.",
+  "Can not find any media for web url": "Can not find any media for web url '{0}'.",
+  "Choose a media to download": "Choose a media to download.",
+  "Can not download media": "Can not download media '{0}'."
 }
