--- a/src/AVOne.Tool/Resources/Resource.zh-CN.resx
+++ b/src/AVOne.Tool/Resources/Resource.zh-CN.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DownloadVideoExample" xml:space="preserve">
+    <value>从{1}下载视频到{0}.</value>
+  </data>
   <data name="ErrorCannotInstallPlugins" xml:space="preserve">
     <value>无法安装插件 '{0}'</value>
   </data>
@@ -151,7 +154,7 @@
     <value>提取媒体的网站地址.</value>
   </data>
   <data name="HelpTextffmpeg" xml:space="preserve">
-    <value>指定外部ffmpeg路劲</value>
+    <value>ffmpeg可执行程序全路径, 例如 C:\Tools\ffmpeg.exe</value>
   </data>
   <data name="HelpTextFileName" xml:space="preserve">
     <value>文件名</value>
@@ -161,6 +164,18 @@
   </data>
   <data name="HelpTextMoveToTargetFolder" xml:space="preserve">
     <value>移动的目标路劲.</value>
+  </data>
+  <data name="HelpTextOptionPreferName" xml:space="preserve">
+    <value>设置保存文件名.</value>
+  </data>
+  <data name="HelpTextOptionRetryCount" xml:space="preserve">
+    <value>每个分片下载异常时的重试次数.</value>
+  </data>
+  <data name="HelpTextOptionSaveDir" xml:space="preserve">
+    <value>设置输出目录.</value>
+  </data>
+  <data name="HelpTextOptionThreadCount" xml:space="preserve">
+    <value>设置下载线程数.</value>
   </data>
   <data name="HelpTextQuiet" xml:space="preserve">
     <value>不再显示摘要信息</value>
