--- a/src/AVOne.Tool/Resources/Resource.resx
+++ b/src/AVOne.Tool/Resources/Resource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DownloadVideoExample" xml:space="preserve">
+    <value>Download video to {0} from {1}.</value>
+  </data>
   <data name="ErrorCannotInstallPlugins" xml:space="preserve">
     <value>Can not install plugin {0}</value>
   </data>
@@ -161,6 +164,18 @@
   </data>
   <data name="HelpTextMoveToTargetFolder" xml:space="preserve">
     <value>Path to target folder to move.</value>
+  </data>
+  <data name="HelpTextOptionPreferName" xml:space="preserve">
+    <value>Set output filename.</value>
+  </data>
+  <data name="HelpTextOptionRetryCount" xml:space="preserve">
+    <value>The number of retries when download segment error.</value>
+  </data>
+  <data name="HelpTextOptionSaveDir" xml:space="preserve">
+    <value>Set output directory.</value>
+  </data>
+  <data name="HelpTextOptionThreadCount" xml:space="preserve">
+    <value>Set download thread count.</value>
   </data>
   <data name="HelpTextSaveMetadata" xml:space="preserve">
     <value>Save metadata or not. </value>
