--- a/src/Lang/Lang.zh-CN.json
+++ b/src/Lang/Lang.zh-CN.json
@@ -17,5 +17,6 @@
   "Can not find extractor for web url": "无法为 '{0}' 获得可用的提取器.",
   "Can not find any media for web url": "无法为 '{0}' 获得可下载的视频.",
   "Choose a media to download": "选择需要下载的视频",
-  "Can not download media": "无法下载视频 '{0}'."
+  "Can not download media": "无法下载视频 '{0}'.",
+  "Download video example": "从{1}下载视频到{0}."
 }
