--- a/src/Lang/Lang.zh-CN.json
+++ b/src/Lang/Lang.zh-CN.json
@@ -18,5 +18,9 @@
   "Can not find any media for web url": "无法为 '{0}' 获得可下载的视频.",
   "Choose a media to download": "选择需要下载的视频",
   "Can not download media": "无法下载视频 '{0}'.",
-  "Download video example": "从{1}下载视频到{0}."
+  "Download video example": "从{1}下载视频到{0}.",
+
+
+
+  "Official M3U8 Donwloader": "官方M3U8下载器"
 }
