--- a/src/Lang/Lang.en-US.json
+++ b/src/Lang/Lang.en-US.json
@@ -18,6 +18,12 @@
   "Can not find extractor for web url": "Can not find extractor for web url '{0}'.",
   "Can not find any media for web url": "Can not find any media for web url '{0}'.",
   "Choose a media to download": "Choose a media to download.",
+  "Choose a downloader to download": "Choose a downloader to download.",
   "Can not download media": "Can not download media '{0}'.",
-  "Download video example": "Download video to {0} from {1}."
+  "Download video example": "Download video to {0} from {1}.",
+  "Merge media": "Merging media.",
+
+
+
+  "Official M3U8 Donwloader": "Official M3U8 Donwloader"
 }
