--- a/src/AVOne.Server/wwwroot/i18n/zh-CN.json
+++ b/src/AVOne.Server/wwwroot/i18n/zh-CN.json
@@ -82,5 +82,13 @@
         }
       }
     }
+  },
+  "Downloads":{
+    "Title":"下载",
+    "Tasks":{
+      "Title":"下载任务",
+      "AddTask":"添加下载任务",
+      "DeleteTask":"删除下载任务"
+    }
   }
 }
