--- a/src/AVOne.Server/wwwroot/i18n/zh-CN.json
+++ b/src/AVOne.Server/wwwroot/i18n/zh-CN.json
@@ -19,6 +19,20 @@
     "Disable":"禁用",
     "Enable":"启用"
   },
+  "Download":{
+    "Title":"下载",
+    "Tasks":{
+      "Title":"下载任务",
+      "AddTask":"添加下载任务",
+      "DeleteTask":"删除下载任务",
+      "Message":{
+        "AddTaskSuccess":"添加下载任务'{0}'成功",
+        "AddTaskFailed":"添加下载任务'{0}'失败",
+        "DeleteTaskSuccess":"删除下载任务'{0}'成功",
+        "DeleteTaskFailed":"删除下载任务'{0}'失败"
+      }
+    }
+  },
   "Settings": {
     "Title": "设置",
     "System": {
