--- a/src/AVOne.Server/wwwroot/i18n/zh-CN.json
+++ b/src/AVOne.Server/wwwroot/i18n/zh-CN.json
@@ -30,9 +30,14 @@
       "DeleteTask":"删除下载任务",
       "Message":{
         "AddTaskSuccess":"添加下载任务'{0}'成功",
-        "AddTaskFailed":"添加下载任务'{0}'失败",
+        "AddTaskFailed":"添加下载任务'{0}'失败,原因'{1}'",
         "DeleteTaskSuccess":"删除下载任务'{0}'成功",
         "DeleteTaskFailed":"删除下载任务'{0}'失败"
+      },
+      "FailedReason":{
+        "NoExtrator":"未找到适用于 '{0}' 的提取器",
+        "NoDownloader":"未找到适用于'{0}' 的下载器",
+        "GetDownloadItemFailed":"无法从'{0}'中提取可下载的媒体"
       }
     },
       "Tags":{
