--- a/src/AVOne.Server/wwwroot/i18n/zh-CN.json
+++ b/src/AVOne.Server/wwwroot/i18n/zh-CN.json
@@ -22,6 +22,18 @@
   "Download":{
     "Title":"下载",
     "Search":"搜索任务",
+    "Detail":{
+      "Info":"下载信息",
+      "JobInfo":"任务信息",
+      "Save":"保存",
+      "Tags":"任务标签",
+      "DownloadSpeedInfo":"速度信息",
+      "TotalSize":"文件大小",
+      "Speed":"下载平均速度",
+      "FileInfo":"文件信息",
+      "FinalDir":"文件目录",
+      "FinalFileName":"文件名"      
+    },
     "Tasks":{
       "Title":"下载任务",
       "AddTask":"添加下载任务",
@@ -30,6 +42,7 @@
       "DeleteTask":"删除下载任务",
       "StopTask": "停止下载任务",
       "ViewDetail": "查看任务详情",
+      "Failed":"下载失败",
       "Message":{
         "AddTaskSuccess":"添加下载任务'{0}'成功",
         "AddTaskFailed":"添加下载任务'{0}'失败,原因'{1}'",
@@ -45,7 +58,8 @@
       "Tags":{
         "Censored":"有码",
         "Uncensored":"无码",
-        "Chinese":"中文",
+        "Chinese":"国产",
+        "ChineseSub":"中文字幕",
         "Taiwanese":"台湾",
         "Japanese":"日本",
         "Other": "其他",
@@ -55,7 +69,7 @@
       "Status": {
         "Downloading":"下载中",
         "Completed": "已完成",
-        "Deleted": "回收站"
+        "Canceled": "已取消"
       }
   },
   "Settings": {
