--- a/src/AVOne.Server/wwwroot/i18n/zh-CN.json
+++ b/src/AVOne.Server/wwwroot/i18n/zh-CN.json
@@ -36,7 +36,9 @@
     },
     "Tasks":{
       "Title":"下载任务",
-      "AddTask":"添加下载任务",
+      "AddTask":"添加下载任务",      
+      "AddTaskThreadCount": "最大线程数",
+      "AddTaskRetryCount": "重试次数",
       "AddTaskUrl": "下载任务链接",
       "AddTaskUrlHint": "例如:https://missav.com/fr/cus-1468",
       "DeleteTask":"删除下载任务",
